Easy and useful problems.